cmake_minimum_required(VERSION 3.29)
project(CPrimerPlus_ProgramPractices C)

set(CMAKE_C_STANDARD 11)

add_executable(exercise2_1 src/chapter2nd/exercise2_1.c)
add_executable(exercise2_2 src/chapter2nd/exercise2_2.c)
add_executable(exercise2_3 src/chapter2nd/exercise2_3.c)
add_executable(exercise2_4 src/chapter2nd/exercise2_4.c)
add_executable(exercise2_5 src/chapter2nd/exercise2_5.c)
add_executable(exercise2_6 src/chapter2nd/exercise2_6.c)
add_executable(exercise2_7 src/chapter2nd/exercise2_7.c)
add_executable(exercise2_8 src/chapter2nd/exercise2_8.c)